--- a/css/tUpdate.css
+++ b/css/tUpdate.css
@@ -96,9 +96,6 @@ table{
     color: #192436;
 }
 
-
-
-
 #foot {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -116,8 +113,6 @@ table{
     width:250px;
 }
 
-
-
 .delete {
     background-color: white;
     color: red;
@@ -130,3 +125,73 @@ table{
     color: white;
 
   }
+  @media screen and (max-width : 800px) {
+    #logo {
+        width: 50%;
+        height: auto;
+     }
+
+     #menu{
+        display: flex;
+
+     }
+
+     #homelogo{
+        width: 20px;
+        height: 20px;
+        margin: 0;
+     }
+
+    header{
+        width: auto;
+        padding: 2px;
+    }
+
+    h2{
+        padding: 10px 0px 10px 0px ;
+        font-size: 1.5em;
+    }
+
+
+    #head{
+        margin: 5px;
+        padding: 2px  40px;
+        font-size: 1em;
+    }
+
+    table{
+
+        border: solid 1px black;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        font-size: 0.4em;
+        }
+    
+    #headi {
+        background-color: gray;
+        color: white;
+    }
+
+    #back{
+        background-image:none;
+        background-color: rgba(255, 255, 255, 0.679);
+    }
+    
+    th,tr,td{
+        margin: 0%;
+        border-spacing: 0;
+    }
+
+    table, th, td {
+        padding: 0 !important;
+    }
+    #foot {
+        font-size: 10px;
+    }
+    
+    #footicon{
+        width:100px;
+    }
+
+}
