--- a/css/Home.css
+++ b/css/Home.css
@@ -57,55 +57,12 @@ header {
 
 }
 
-@media screen and (max-width : 800px) {
-    #home
-    {
-        background-image: url(../Media/kid.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;  
-        color: black;
-        text-align: left;
-        word-spacing: 0%;
-        letter-spacing: normal;
+#schHead{
+    font-size: 3em;
+    text-shadow: 1px 1px 5px #ffffff;
 
-     }  
-
-     #logo {
-        width: 100%;
-        height: auto;
-     }
-
-     header {
-        background-color: #192436;
-        display:flex;
-        justify-content: space-between;
-        position: sticky;
-        align-items:baseline;
-        scroll-behavior: smooth;
-        position: sticky;
-        top: 0px;
-    }
-
-   
-
-    #menu a{
-        display: inline-block;
-        text-decoration: none;
-        color: white;
-        justify-content: space-evenly;
-        padding: 0px  10px 0px 10px;
-    }
-
-    #menu a:hover {
-        color: #192436;
-        background-color: aliceblue;
-        transition: 0.2s; 
-        border-radius: 70px;
-        padding: 0px 10px;
-        text-decoration: dashed;
-        text-shadow: 1px 1px 5px #192436;    
-    }
 }
+
 
 h3{
     text-align: center;
@@ -115,11 +72,7 @@ h3{
     letter-spacing: 3px;
     
 }
-#schHead{
-    font-size: 3em;
-    text-shadow: 1px 1px 5px #ffffff;
 
-}
 
 .pass{
     font-family:Arial, Helvetica, sans-serif;
@@ -194,4 +147,91 @@ p{
 
 #footicon{
     width:250px;
+}
+
+
+@media screen and (max-width : 800px) {
+    #home
+    {   
+        background-image: none;
+        background-color: #ffffff;
+        color: black;
+
+     }  
+
+     #logo {
+        width: 100%;
+        height: auto;
+     }
+
+     #schHead{
+        font-size:2em;
+        text-shadow: 1px 1px 5px #ffffff;
+        background-color: bisque;
+    
+    }
+
+
+    .pass{
+        display: block;
+        justify-content: center;
+        font-size: 0.8em; 
+        letter-spacing:2px;
+        text-shadow: none;
+    }
+     header {
+        background-color: #192436;
+        display:flex;
+        justify-content: space-between;
+        position: sticky;
+        align-items:baseline;
+        scroll-behavior: smooth;
+        position: sticky;
+        top: 0px;
+        padding: 2px;
+    }
+
+   
+
+    #menu a{
+        display: inline-block;
+        text-decoration: none;
+        color: white;
+        justify-content: space-evenly;
+        padding: 0px  10px 0px 10px;
+    }
+
+    #menu a:hover {
+        color: #192436;
+        background-color: aliceblue;
+        transition: 0.2s; 
+        border-radius: 70px;
+        padding: 0px 10px;
+        text-decoration: dashed;
+        text-shadow: 1px 1px 5px #192436;    
+    }
+
+    #features 
+    {
+        padding: 10px 10px;
+        display: block;
+        background-color: #192436;
+        color: white;
+        font-size: 1em;
+    }
+    #feature{
+        gap: 20px;
+        display: block;
+    }
+
+/*     footer */
+
+#foot {
+    font-size: 10px;
+}
+
+#footicon{
+    width:100px;
+}
+
 }
