--- a/css/tView.css
+++ b/css/tView.css
@@ -66,7 +66,6 @@ table{
         text-align: center;
         justify-self: center;
         margin: 10px 20% ;
-        border-style: solid;
         padding: 0px 50px;
 }
 
@@ -128,28 +127,25 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 
-#view{
-    display:flex;
+#link{
+    display: block;
+    text-align: center;
     justify-self: center;
-    border: solid 5px red ;
-    background-color: white;
-    color: red;
-    padding: 5px 50px;
-    font-size: 1.5em;
-    border-radius: 40px;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 2% 0px 0px 0px;
     text-decoration: none;
+    color: #ff0000;
+    background-color: white;
+    border: solid 5px ;
+    margin-top: 50px;
+    border-radius: 70px;
+    padding: 5px 100px;
+    font-size: 1.5em;
 
-}
+   }
 
-
-
-#view:hover{
+   #link:hover{
+    color: #ffffff;
     background-color: red;
-    color: white;
-}
+   }
 
 
 #foot {
@@ -167,4 +163,108 @@ input[type="number"]::-webkit-inner-spin-button {
 
 #footicon{
     width:250px;
+}
+
+
+
+@media screen and (max-width : 800px) {
+
+    #logo {
+        width: 50%;
+        height: auto;
+     }
+
+     #menu{
+        display: flex;
+
+     }
+
+     #homelogo{
+        width: 20px;
+        height: 20px;
+        margin: 0;
+     }
+
+    header{
+        width: auto;
+        padding: 2px;
+    }
+
+    h2{
+        padding: 10px 0px 10px 0px ;
+        font-size: 1.5em;
+    }
+
+
+    table{
+        border: solid 2px brown;
+        text-align: center;
+        justify-self: center;
+        margin: 10px ;
+        padding: 0px 10px;
+}
+
+#head1{
+    padding: 2px;
+    font-size: 1em;
+}
+
+.lab{
+    font-size: 0.7em;
+}
+
+.in{
+    border-width: 0px 0px 1px 0px;
+    font-size: 0.7em;
+}
+
+.in:hover{
+    border-width: 0px 0px 1px 0px;
+}
+
+
+.in:focus{
+    border-width: 0px 0px 1px 0px;
+}
+
+#sub{
+    border: solid 2px green ;
+    padding: 2px 10px;
+    font-size: 1.1em;
+    margin: 4% 0px 10px 0px;
+}
+
+#sub:hover{
+    background-color: green;
+    color: white;
+}
+#link{
+    display: block;
+    text-align: center;
+    justify-self: center;
+    text-decoration: none;
+    color: #ff0000;
+    background-color: white;
+    border: solid 1px ;
+    margin-top: 10px;
+    border-radius: 70px;
+    padding: 2px 10px;
+    font-size: 0.9em;
+
+   }
+
+#view{
+    border: solid 2px red ;
+    padding: 2px 10px;
+    font-size: 1.1em;
+    margin: 2% 0px 0px 0px;
+}
+
+    #foot {
+        font-size: 10px;
+    }
+    
+    #footicon{
+        width:100px;
+    }
 }
