--- a/css/tView.css
+++ b/css/tView.css
@@ -144,6 +144,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
    #link:hover{
     color: #ffffff;
+    border: solid 5px red;
     background-color: red;
    }
 
@@ -251,6 +252,12 @@ input[type="number"]::-webkit-inner-spin-button {
     padding: 2px 10px;
     font-size: 0.9em;
 
+   }
+
+   #link:hover{
+    color: #ffffff;
+    border: solid 1px red;
+    background-color: red;
    }
 
 #view{
